aksmigrate/test/e2e/manifests/scenario1-ipblock/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-ipblock
  labels:
    aksmigrate-e2e: "true"
